--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "hackerrank",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.html",
-  "scripts": {
-    "start": "parcel index.html --open",
-    "build": "parcel build index.html"
-  },
-  "dependencies": {
-    "jest": "23.6.0"
-  },
-  "devDependencies": {
-    "parcel-bundler": "^1.6.1"
-  },
-  "keywords": []
+    "name": "hackerrank1",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.html",
+    "scripts": {
+        "start": "parcel index.html --open",
+        "build": "parcel build index.html"
+    },
+    "dependencies": {
+        "jest": "23.6.0"
+    },
+    "devDependencies": {
+        "parcel-bundler": "^1.6.1"
+    },
+    "keywords": []
 }
